# mogwai-todo

./: .gitignore  .mise.toml  README.md  deno.json  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release-desktop.yml  release-tauri.yml
app/: app.js  impactGraph.js  index.html  styles.css  templateRunner.js
desktop/: build-tauri-dist.ts  main.ts  run-portable.cmd
rust-core/: Cargo.toml
rust-core/src/: lib.rs
src/: App.js  App.tsx  main.js  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  template_runner.rs
src/domain/: dateLogic.js  dateLogic.ts  holidayLogic.js  holidayLogic.ts  impactGraph.js  impactGraph.ts  templateRunner.js  templateRunner.ts
src/rust/: bridge.js  bridge.ts
src/storage/: impactGraphStore.js  impactGraphStore.ts  localStore.js  localStore.ts  templateRunnerStore.js  templateRunnerStore.ts
