[package]
name = "todo-desktop"
version = "0.3.0"
description = "Local-first desktop Todo app"
edition = "2021"
rust-version = "1.77"

[lib]
name = "todo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
